--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-markdown": "^8.0.1",
-        "react-scripts": "5.0.0",
+        "react-scripts": "^2.1.3",
         "react-uuid": "^1.0.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
+        "deploy": "gh-pages -b master -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
